--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Create your own connection to the websocket-server by connecting to: </p>
     <!--if working with your own app, please change address to websocket to the address of your running application-->
     <pre>ws://iviz-back.herokuapp.com/</pre>
-    <p></p> Depending on framework and libraries used this can be done in different ways, but usually, you create a connection to the websocket-server by using: </p>
+    <p> Depending on framework and libraries used this can be done in different ways, but usually, you create a connection to the websocket-server by using: </p>
     <pre>
     <!--if working with your own app, please change address to websocket to the address of your running application-->
       let ws = new WebSocket("ws://iviz-back.herokuapp.com");
@@ -27,7 +27,7 @@
 
     <h2>Data currently available</h2>
 
-    <p>Once asking for data, you will then get a response with the following content:</p>
+    <p>When asking for data, you will then get a response with the following content:</p>
     <ul>
         <li>"positions": Gives an array with objects containing latitude, longitude and a unix timestamp for commits made in the repos defined in the application, updated everyday at 22 CET.</li>
         <li>"commits": Gives an array with objects containing reponame, owner of repo, timestamp, message, committer, filename and code from the file(base64-encoded) for commits made in the repos defined in the application, updated everyday at 22 CET.</li>
